Modernize/clean up GroovyServices and GroovyLanguageServer